--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@
 /* SUBTITLE */
 #index-top-title h2 {
     font-size: clamp(1.2rem, 2.5vw, 30rem);
-    margin: 0;padding: 0;
+    margin: 0 0 3rem 0; padding: 0;
     width: 100%;
     font-weight: normal;
 }
