--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,7 +101,6 @@
 
 
 @media (max-width: 600px) {
-    /* Target the parent container */
     .index-service,
     .index-service:nth-of-type(even) {
         flex-direction: column;
@@ -123,7 +122,7 @@
 /* Container Spacing & Alignment */
 #philosophy-quote {
     width: 100%;
-    margin: 20px 0; padding: 0;
+    margin: 0 0 40px 0; padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -133,10 +132,10 @@
 #philosophy-quote p {
     width: 50%;
     text-align: center;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     font-style: italic;
     color: #e0e0e0;
-    margin: 0; padding: 15px 50px;
+    margin: 0; padding: 10px;
     position: relative;
 }
 
@@ -144,8 +143,7 @@
 @media (max-width: 600px) {
     #philosophy-quote p {
         width: 100%;
-        font-size: 1.2rem;
-        padding: 10px 20px;
+        font-size: 1.3rem;
     }
 }
 /* #endregion */
@@ -153,17 +151,26 @@
 
 /* #region ===== NOT FOUND ===== */
 #not-found-container {
-    margin: 120px 20px;
-    padding: 0;
+    position: relative;
+    margin: 270px 20px; padding: 0;
     display: flex;
     flex-direction: column;
     text-align: center;
+    height: 100%;
+    justify-content: center;
 }
 
 
 #not-found-container h1 {
-    font-size: clamp(3rem, 12vw, 40rem);
+    font-size: clamp(4rem, 8vw, 30rem);
     margin: 0; padding: 0;
+    width: 100%;
+}
+
+
+#not-found-container p {
+    font-size: clamp(1.5rem, 2vw, 5rem);
+    margin: 10px 0 0 0; padding: 0;
     width: 100%;
 }
 
