--- a/styles/animations.css
+++ b/styles/animations.css
@@ -44,3 +44,20 @@
 
 
 
+/* #region ===== BUTTON HOVER ===== */
+
+@keyframes buttonHover {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.05);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+/* #endregion */
