--- a/styles/defaults.css
+++ b/styles/defaults.css
@@ -47,6 +47,23 @@ body {
     text-shadow: 0 0 2px var(--primary-color);
 }
 
+
+.default-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: var(--primary-color);
+    font-size: clamp(1.3rem, 2vw, 10rem);
+    background: #111;
+    border: 3px solid var(--primary-color);
+    box-shadow: 0 0 15px var(--primary-color);
+    margin: 0 auto 50px auto; padding: 10px 20px;
+}
+
+.default-btn:hover {
+    animation: buttonHover 1s infinite ease-in-out;
+    box-shadow: 0 0 20px var(--primary-color);
+}
+
 /* #endregion */
 
 
